exercises/k8s-manifests/exercise-8/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    app: java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: javamysqlapp
        image: fsiegrist/fesi-repo:bootcamp-java-mysql-project-1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
# ---
# for AWS EKS:
# apiVersion: v1
# kind: Service
# metadata:
#   name: java-app-service
# spec:
#   selector:
#     app: java-app
#   ports:
#   - protocol: TCP
#     port: 8080
#     targetPort: 8080
#   type: LoadBalancer
